Change tests to reproduce manual testing errors